--- a/public/index.html
+++ b/public/index.html
@@ -32,16 +32,16 @@
         dataLayer.push(arguments);
       }
     </script>
-    <title>Free Modern React Templates &amp; Components for building landing pages and UIs - Treact</title>
+    <title>CS5345 - Product Website</title>
     <meta
       name="description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Product Website for final for SMU's CS5345 - Advanved Application Programming. "
     />
-    <meta property="og:site_name" content="Treact" />
-    <meta property="og:title" content="Free Modern React Templates and Components for Building Landing Pages" />
+    <meta property="og:site_name" content="CS5345" />
+    <meta property="og:title" content="CS5345 - Product Website" />
     <meta
       property="og:description"
-      content="Easily customizable modern React UI Templates and Components built using TailwindCSS which are also lightweight and simple to setup. All components are modular and fully responsive for great mobile experience as well as big desktop screens.  Brand Colors are also fully customizable. "
+      content="Product Website for final for SMU's CS5345 - Advanved Application Programming. "
     />
     <meta
       property="og:image"
